# kotlin-lsp

./: Cargo.toml  README.md  catch_shadow.kt  class_param.kt  destructure_shadow.kt  for_shadow.kt  lambda_shadow.kt  shadow_sample.kt
.github/workflows/: release.yml
contrib/vscode/: .vscodeignore  extension.js
docs/: editors.md  features.md
src/: inlay_hints.rs  inlay_hints_tests.rs  main.rs  parser.rs  parser_tests.rs  queries.rs  semantic_tokens.rs  semantic_tokens_tests.rs  workspace_json.rs  workspace_json_tests.rs
src/backend/: mod.rs
src/cli/: args.rs  hover.rs  mod.rs  output.rs  run.rs  sources.rs  tokens.rs
src/indexer/: apply.rs  node_ext_tests.rs
src/resolver/: infer.rs  tests.rs
